--- a/app.html
+++ b/app.html
@@ -8,6 +8,10 @@
     <title>Magic Notes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <link href="https://www.cssscript.com/wp-includes/css/sticky.css" rel="stylesheet" type="text/css">
+        <link href="https://www.cssscript.com/demo/sticky.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="app.css">
 </head>
 
 <body>
@@ -33,7 +37,8 @@
           <h1>Welcome to Magic Notes</h1>
           <div class="card"> 
             <div class="card-body">
-              <div class="mb-3">
+              <input  id="enterTitle" class="form-control me-2" type="text" placeholder="Enter Title" aria-label="Search">
+              <div class="mb-3 my-3">
                 <textarea class="form-control" id="addTxt" rows="3"></textarea>
               </div>
               <button id="addBtn" class="btn btn-primary">Add Notes</button>
@@ -63,7 +68,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ"
         crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script src="https://www.cssscript.com/demo/alert-confirm-toast-dialog/asteroid-alert.js"></script>
+        <script src="https://www.cssscript.com/demo/alert-box-pling/pling.js"></script>
         <script src="app.js"></script>
 </body>
-
+<script>
+  AOS.init();
+</script>
 </html>
